♻️ refactor: SponsorSupport pop up once a year in January

--- a/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
                     <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
 
                     <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
-                    <SponsorSupportSnackbar></SponsorSupportSnackbar>
+                    <SponsorSupportSnackbar @bind-Visible="showSponsorSupport"></SponsorSupportSnackbar>
                 </ChildContent>
 
                 <ErrorContent>
