🆕 feat: LAN Change the dialog title upon completion or termination of transmission

--- a/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANReceiverPage.razor
+++ b/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANReceiverPage.razor
@@ -29,7 +29,7 @@
 </ScrollContainer>
 
 <TransferDialog @bind-Visible="showTransferDialog"
-                Title="@(I18n.T("lanReceiver.Receiving"))"
+                Title="@(I18n.T(transferDialogTitle))"
                 Ps="ps"
                 Bytes="bytes"
                 TotalBytes="totalBytes"
