--- a/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANSenderPage.razor
+++ b/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANSenderPage.razor
@@ -89,7 +89,7 @@
 </ScrollContainer>
 
 <TransferDialog @bind-Visible="showTransferDialog"
-                Title="@(I18n.T("lanSender.Sending"))"
+                Title="@(I18n.T(transferDialogTitle))"
                 Ps="ps"
                 Bytes="bytes"
                 TotalBytes="totalBytes"
