--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -1,4 +1,4 @@
-﻿/*修复应用栏中最前最后的位置，使用包裹的组件边距不正确*/
+/*修复应用栏中最前最后的位置，使用包裹的组件边距不正确*/
 .m-application--is-ltr .m-toolbar__content > .m-btn.m-btn--icon:first-of-type:nth-child(2), .m-application--is-ltr .m-toolbar__extension > .m-btn.m-btn--icon:first-of-type:nth-child(2) {
     margin-left: -12px;
 }
@@ -347,3 +347,7 @@
     .m-chip-group .m-slide-group__wrapper::-webkit-scrollbar {
         display: none;
     }
+
+.theme--dark.m-picker__body {
+    background: initial;
+}
