--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -54,14 +54,12 @@
                  ContentStyle="height:100%;">
     <div>
         <div class="d-flex align-center px-3 flex-wrap">
-            <button class="d-flex align-center text-h6 font-weight-bold mr-5" @onclick="()=>showCreateTime=true">
+            <button class="d-flex align-center text-h6 font-weight-bold mr-3" @onclick="()=>showDate=true">
                 @(diary.CreateTime.ToString("d"))
-                <MIcon Size="20"
-                       Right>
-                    mdi-pencil-outline
-                </MIcon>
             </button>
-
+            <button class="d-flex align-center font-weight-bold mr-5" @onclick="()=>showTime=true">
+                @(diary.CreateTime.ToString("t"))
+            </button>
             <span class="text-subtitle-2">
                 @(I18n.ToWeek(diary.CreateTime))
             </span>
@@ -171,9 +169,13 @@
                       @bind-Value="diary.Location">
 </SelectLocationDialog>
 
-<MultiDatePicker @bind-Visible="showCreateTime"
+<MultiDatePicker @bind-Visible="showDate"
                  @bind-Value="SelectedDate">
 </MultiDatePicker>
+
+<MultiTimePicker @bind-Visible="showTime"
+                  @bind-Value="SelectedTime">
+</MultiTimePicker>
 
 <MOverlay Value="overlay"
           Opacity="0">
