--- a/src/SwashbucklerDiary.Rcl.Client/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
+++ b/src/SwashbucklerDiary.Rcl.Client/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Pages
 @inherits FocusDialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
@@ -63,4 +63,4 @@
             </MCardActions>
         </MCard>
     </MForm>
-</MDialogExtension>
+</CustomMDialog>
