--- a/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANConfigDialog.razor
+++ b/src/SwashbucklerDiary.Rcl.Client/Pages/Export/LANTransfer/LANConfigDialog.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Pages
 @inherits FocusDialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="VisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
@@ -69,4 +69,4 @@
             </MCardActions>
         </MCard>
     </MForm>
-</MDialogExtension>
+</CustomMDialog>
