--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DatePickerDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DatePickerDialog.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
@@ -27,4 +27,4 @@
             @(I18n.T("Share.OK"))
         </MButton>
     </MDatePicker>
-</MDialogExtension>
+</CustomMDialog>
