--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits FocusDialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
@@ -67,4 +67,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
