--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   Fullscreen="true"
                   Transition=""
@@ -40,4 +40,4 @@
         </div>
 
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
