--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
@@ -1,9 +1,9 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @typeparam TItem
 @typeparam TItemValue
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
@@ -37,4 +37,4 @@
             </MRadioGroup>
         </MCardText>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
