--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
@@ -2,7 +2,7 @@
 @typeparam TValue
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
@@ -45,4 +45,4 @@
             </MChipGroup>
         </MCardText>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
