--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
@@ -24,7 +24,7 @@
         <MCardText Class="pb-0">
             @if (showSearch)
             {
-                <MTextFieldExtension @bind-Value="_searchText"
+                <CustomMTextField @bind-Value="_searchText"
                                      Class="mb-2"
                                      OnInput="UpdateInternalItems"
                                      Dense
@@ -37,7 +37,7 @@
                                      spellcheck="false"
                                      Placeholder="@(I18n.T("Share.Search"))"
                                      PrependInnerIcon="mdi-magnify">
-                </MTextFieldExtension>
+                </CustomMTextField>
             }
             <div class="scroll-show" style="max-height:300px;">
                 <Virtualize Items="internalItems"
@@ -79,7 +79,7 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
 
 <InputDialog @bind-Visible="showAdd"
              Title="@(I18n.T("Location.Add"))"
