--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TimePickerDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TimePickerDialog.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   Width="@("auto")"
@@ -21,4 +21,4 @@
             @(I18n.T("Share.OK"))
         </MButton>
     </MTimePicker>
-</MDialogExtension>
+</CustomMDialog>
