--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/UpdateDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/UpdateDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   Eager="false"
@@ -42,4 +42,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
