--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiListDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiListDialog.razor
@@ -1,9 +1,9 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
 <MultiDisplay>
     <MobileContent>
-        <MBottomSheetExtension MyValue="Visible"
+        <CustomMBottomSheet MyValue="Visible"
                                MyValueChanged="InternalVisibleChanged"
                                ContentClass="rounded-t-lg">
             <MCard Class="rounded-t-lg py-2">
@@ -41,10 +41,10 @@
                     </MListItem>
                 </MList>
             </MCard>
-        </MBottomSheetExtension>
+        </CustomMBottomSheet>
     </MobileContent>
     <DesktopContent>
-        <MDialogExtension MyValue="Visible"
+        <CustomMDialog MyValue="Visible"
                           MyValueChanged="InternalVisibleChanged"
                           ContentClass="rounded-lg"
                           MaxWidth="420">
@@ -82,6 +82,6 @@
                     </div>
                 </MCardText>
             </MCard>
-        </MDialogExtension>
+        </CustomMDialog>
     </DesktopContent>
 </MultiDisplay>
