--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiTimePicker.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiTimePicker.razor
@@ -3,12 +3,12 @@
 
 <MultiDisplay OnUpdate="UpdateDisplay">
     <MobileContent>
-        <PMobileTimePickerExtension MyVisible="Visible"
+        <CustomPMobileTimePicker MyVisible="Visible"
                                     MyVisibleChanged="InternalVisibleChanged"
                                     Value="Value"
                                     ValueChanged="InternalValueChanged"
                                     Precision="TimePrecision.Minute">
-        </PMobileTimePickerExtension>
+        </CustomPMobileTimePicker>
     </MobileContent>
     <DesktopContent>
         <TimePickerDialog Visible="Visible"
