--- a/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
@@ -90,7 +90,7 @@
                     Value="SelectedDate">
 </ExportByTimeDialog>
 
-<MDialogExtension @bind-MyValue="showConfirmMerge"
+<CustomMDialog @bind-MyValue="showConfirmMerge"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
     <MCard>
@@ -118,4 +118,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
