--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -177,7 +177,7 @@ OnClick="NavigateToBack">
     
 </ScrollContainer>
 
-<MDialogExtension @bind-MyValue="showClearCache"
+<CustomMDialog @bind-MyValue="showClearCache"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
     <MCard>
@@ -200,4 +200,4 @@ OnClick="NavigateToBack">
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
