--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DeleteDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DeleteDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
@@ -25,4 +25,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialogExtension>
+</CustomMDialog>
