--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 @inherits FocusDialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<CustomMDialog MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
@@ -63,4 +63,4 @@
             </MCardActions>
         </MCard>
     </MForm>
-</MDialogExtension>
+</CustomMDialog>
