♻️ refactor: Time format

--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -62,11 +62,11 @@
     <div id="screenshot" class="primary-background">
         <div class="d-flex align-center px-3">
             <span class="text-h6 font-weight-bold mr-3">
-                @(diary.CreateTime.ToString("d"))
+                @(diary.CreateTime.ToString("yyyy/MM/dd"))
             </span>
 
             <span class="font-weight-bold mr-5">
-                @(diary.CreateTime.ToString("t"))
+                @(diary.CreateTime.ToString("HH:mm"))
             </span>
 
             <span class="text-subtitle-2">
