--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -55,10 +55,10 @@
     <div>
         <div class="d-flex align-center px-3 flex-wrap">
             <button class="d-flex align-center text-h6 font-weight-bold mr-3" @onclick="()=>showDate=true">
-                @(diary.CreateTime.ToString("d"))
+                @(diary.CreateTime.ToString("yyyy/MM/dd"))
             </button>
             <button class="d-flex align-center font-weight-bold mr-5" @onclick="()=>showTime=true">
-                @(diary.CreateTime.ToString("t"))
+                @(diary.CreateTime.ToString("HH:mm"))
             </button>
             <span class="text-subtitle-2">
                 @(I18n.ToWeek(diary.CreateTime))
